--- a/index.html
+++ b/index.html
@@ -635,7 +635,8 @@
 						<div class="col-md-12">
 						   <p class="work-menu">
 							  <span><a href="#projects" class="tab-link" data-section="projects">Projects</a></span> 
-							  <span><a href="#webdesign" class="tab-link" data-section="webdesign">Web Design</a></span> 
+							  <span><a href="#webdesign" class="tab-link" data-section="webdesign">Web Design</a></span>
+							  <span><a href="#webdev" class="tab-link" data-section="webdev">Web Development</a></span>
 							  <span><a href="#software" class="tab-link" data-section="software">Software</a></span>
 							  <span><a href="#others" class="tab-link" data-section="others">Designs</a></span> 
 						   </p>
@@ -716,6 +717,20 @@
 											<div class="con">
 												<h3>Project 02 - HEALTHLINE </h3>
 												<span>Human Computer and Interaction</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div id="webdev" class="section-content" style="display: none;">
+							<a href="https://github.com/tiaraik19/EduFun">
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+									<div class="project" style="background-image: url(images/project1webprog.png);">
+										<div class="desc">
+											<div class="con">
+												<h3>Project 01 - EDU FUN </h3>
+												<span>Web Programming</span>
 											</div>
 										</div>
 									</div>
