--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Soft Skills</a></li>
+						<li><a href="#" data-nav-section="services">Skills</a></li>
 						<li><a href="#" data-nav-section="skills">Technical</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -101,7 +101,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Tiara</h1>
 						   					<!-- <h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2> -->
-												<p><a href = "https://drive.google.com/file/d/1QZovHaFKTZjl9kt5IGr8in4aRBvPZCpQ/view?usp=sharing">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href = "https://drive.google.com/file/d/1YVqNn9QWhvwAKL5RF6ArBd06bDUQfGLn/view?usp=sharing">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -137,8 +137,8 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p> Enthusiastic undergraduate student of computer science major at BINUS University with a GPA of 3.65 / 4.00. With a strong interest and passiion for designs and project management, I am now actively participating as an activist in BINUS TV Club and Bersama Dalam MUSIk (BDM), playing a significant role in art & design as well as event management.</p>
-										<p>Communication, creativity and innovation, problem-solving, also collaborative are my commitment of work ethics. Dedication and hard work were highlighted by representing my school in national championships, showcasing my resilience and commitment to excellence.</p>
+										<p style="text-align: justify;"> A result-driven Computer Science student at BINUS University with a GPA of 3.74 / 4.00, specializing in Data Engineering and Web Development. I completed a 12-month internship as a Data Engineer Intern at PT Bank Central Asia Tbk (BCA), where I contributed to enterprise-scale report migration and data integration. I developed 70+ optimized SQL queries across Oracle and SQL Server Environments, delivering 55+ production reports used by over 40 business users.  </p>
+										<p style="text-align: justify;"> For my undergraduate thesis, I led the development of a web-based Radiology Queue Management System for hospital operations using Laravel and Bootstrap. Taking on the roles of UI/UX Designer, Frontend Developer, and Scrum Master, I managed sprint planning, task coordination, and system implementation using Agile methodology. Beyond my technical expertise, I am a highly adaptable collaborator, a skill sharpened through my active involvement as an activist in BINUS TV Club and Bersama Dalam Musik student activity units.</p>
 									</div>
 								</div>
 							</div>
@@ -146,33 +146,27 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>UI/UX Design</h3>
+										<h3>UI/UX Designer</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Web Design</h3>
+										<h3>Web Developer</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Programmer</h3>
+										<h3>Data Engineer</h3>
 									</div>
 								</div>
-								<!-- <div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
-									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Application</h3>
-									</div>
-								</div> -->
 							</div>
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>that 30+ projects done sucessfully!</h2>
-										<a href="https://drive.google.com/file/d/1QZovHaFKTZjl9kt5IGr8in4aRBvPZCpQ/view?usp=sharing" class="btn-hire">Hire me</a>
+										<h2>Ready to drive digital innovation <br>and deliver impactful data solutions.</h2>
+										<a href="https://drive.google.com/file/d/1YVqNn9QWhvwAKL5RF6ArBd06bDUQfGLn/view?usp=drive_link" class="btn-hire">Download Resume</a>
 									</div>
 								</div>
 							</div>
@@ -188,7 +182,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">What have I learned?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<h2 class="colorlib-heading">Core Competencies</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
@@ -198,7 +192,7 @@
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Creativity</h3>
+									<h3>Data Engineering & SQL Optimization </h3>
 									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p> -->
 								</div>
 							</div>
@@ -209,7 +203,7 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Communication</h3>
+									<h3>Web Application Development (PHP)</h3>
 									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p> -->
 								</div>
 							</div>
@@ -220,7 +214,7 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Teamwork</h3>
+									<h3>Scrum Project Management</h3>
 									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p> -->
 								</div>
 							</div>
@@ -231,7 +225,7 @@
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Problem Solving</h3>
+									<h3>Business Requirement Analysis</h3>
 									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p> -->
 								</div>
 							</div>
@@ -242,7 +236,7 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Adaptability</h3>
+									<h3>Data Visualization & Reporting</h3>
 									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p> -->
 								</div>
 							</div>
@@ -253,7 +247,7 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Collaboration</h3>
+									<h3>Collaboration & Communication</h3>
 									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p> -->
 								</div>
 							</div>
@@ -269,20 +263,20 @@
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Achievements</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="12" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Months of Data Engineer Experience</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Projects</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="55" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Business Reports Delivered</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="32" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Courses</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="70" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">SQL Queries Developed</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="25" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Teamwork</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="45" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Stored Procedures Implemented</span>
 						</div>
 					</div>
 				</div>
@@ -292,20 +286,20 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Specialty</span>
-							<h2 class="colorlib-heading animate-box">My Skills</h2>
+							<span class="heading-meta">Technical Competencies</span>
+							<h2 class="colorlib-heading animate-box">Core Technical Skills</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>Throughout my studies, I have found that learning through hands-on projects is the most effective way to enhance my programming skills and deepen my understanding of the field. Some of the programming languages I have learned include: </p>
+							<p>The following competencies reflect my academic foundation and professional experience in data engineering and web application development, particularly within enterprise and project-based environments.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>C</h3>
+								<h3>SQL (Oracle & SQL Server)</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <!-- <span>75%</span>/\ -->
 								  	</div>
 								</div>
@@ -313,10 +307,10 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>HTML CSS JS</h3>
+								<h3>Web Development (Figma, Laravel, Bootstrap)</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
 								    <!-- <span>60%</span> -->
 								  	</div>
 								</div>
@@ -324,10 +318,10 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Java</h3>
+								<h3>Data Integration & Query Optimization</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <!-- <span>85%</span> -->
 								  	</div>
 								</div>
@@ -335,10 +329,10 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Laravel</h3>
+								<h3>Agile & Scrum Project Experience</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
 								    <!-- <span>90%</span> -->
 								  	</div>
 								</div>
@@ -346,7 +340,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Python</h3>
+								<h3>Python (Data Processing & NLP)</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -357,7 +351,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Ms. Office</h3>
+								<h3>Reporting Tools (SSRS, Web Intelligence, Mosaic)</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -476,7 +470,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2>Activist of BINUS TV Club <span>Feb 2024 - Present</span></h2>
+					                  <h2>Activist of BINUS TV Club <span>Feb 2024 - Jan 2025</span></h2>
 					                  <p>Promoted BINUS TV to ensure the programs reach a broader audience and generated ideas with creativity, also collaborating with other divisions.</p>
 					               </div>
 					            </div>
@@ -489,7 +483,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2>Activist of Bersama Dalam Musik<span>Feb 2024 - Present</span></h2>
+					               	<h2>Activist of Bersama Dalam Musik<span>Feb 2024 - Jan 2025</span></h2>
 					                  <p>Actively participating in providing guidance during the practice and perform sessions, also ensure optimal preparation for the events.</p>
 					               </div>
 					            </div>
@@ -731,6 +725,19 @@
 											<div class="con">
 												<h3>Project 01 - EDU FUN </h3>
 												<span>Web Programming</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+
+							<a href="https://github.com/asdfasdfaasdf111/MediPlus">
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+									<div class="project" style="background-image: url(images/mediplus.png);">
+										<div class="desc">
+											<div class="con">
+												<h3>Project 02 - MEDIPLUS </h3>
+												<span>Thesis</span>
 											</div>
 										</div>
 									</div>
